# tap-sherpa

./: .gitignore  README.md  meltano.yml  pyproject.toml  requirements.txt  tox.ini
tap_sherpa/: __init__.py  __main__.py  client.py  pagination.py  streams.py  tap.py
